@startuml AI Alarm Creator – Class Diagram
title AI Alarm Creator · Class Diagram

skinparam defaultFontName Roboto
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFCFA

skinparam class {
  BackgroundColor #E8F5E9
  BorderColor     #2E7D32
  HeaderBackgroundColor #C8E6C9
}

' ───────────────────────────────────
'  Composable Dialog
' ───────────────────────────────────

class AIPromptDialog <<@Composable>> {
  - promptText : String
  - isLoading : Boolean
  - error : String?
  + onPromptChange(text: String)
  + onSubmit()
  + onDismiss()
}

' ───────────────────────────────────
'  ViewModel
' ───────────────────────────────────

class AIViewModel {
  - generativeModel : GenerativeModel
  - moshi : Moshi
  --
  + uiState : StateFlow<AIUiState>
  --
  + generateAlarm(prompt: String)
}

' ───────────────────────────────────
'  UI State
' ───────────────────────────────────

class AIUiState <<data class>> {
  + isLoading : Boolean
  + draft : AlarmDraft?
  + error : String?
}

' ───────────────────────────────────
'  Gemini SDK (external)
' ───────────────────────────────────

class GenerativeModel <<external>> {
  + modelName : String
  + apiKey : String
  + generateContent(prompt: String): GenerateContentResponse
}

class GenerateContentResponse <<external>> {
  + text : String?
}

' ───────────────────────────────────
'  Model (shared)
' ───────────────────────────────────

class AlarmDraft <<data class>> {
  + title : String
  + rootCondition : CompositeCondition
  + readout : Boolean
  + ring : Boolean
  + triggerOnce : Boolean
}

' ───────────────────────────────────
'  Relationships
' ───────────────────────────────────

AIPromptDialog --> AIViewModel : observes StateFlow
AIViewModel --> GenerativeModel : generateContent()
AIViewModel ..> AlarmDraft : parses via Moshi
AIViewModel ..> AIUiState : emits
GenerativeModel ..> GenerateContentResponse : returns

note bottom of GenerativeModel
  dev.shreyaspatil.generativeai
  :generativeai-google:1.5.0
  Model: gemini-1.5-pro-vision-latest
  API key from BuildConfig
end note

@enduml
